--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,4 +1,4 @@
-﻿<div class="panel panel-primary">
+<div class="panel panel-primary">
     <div class="panel-heading">
         {{pageTitle}}
     </div>
@@ -10,7 +10,7 @@
         </div>
         <div class="row"  >
             <div class="text-center">Developed by:</div>
-            <h3 class="text-center" color="red">SATVIK</h3>
+            <h3 class="text-center" >SATHVIK</h3>
 
             <div class="text-center">@satvik</div>
 
